--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ html {
 body {
   position: relative;
   margin: 0;
+  height: 100%;
   /*min-height: 100%;*/
 }
 
@@ -481,7 +482,10 @@ button.demo:hover {
   }
 
   #homepage {
-    height: 70%;
+    /*height: 70%;*/
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
   #codingpage, #designpage {
